# django-challenge-planeks

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  docker-compose.yml  manage.py  pre-commit  pyproject.toml  run_test_with_coverage.sh  testing.docker-compose.yml
.coverage/: coverage.xml  coverage_public.xml
.github/workflows/: CI.yml  codeql.yml  deploy_to_heroku.yml
datagen/: manage.py
datagen/config/: asgi.py  celery.py  storage_backends.py  urls.py  wsgi.py
datagen/config/settings/: base.py  heroku.py  local_docker.py  test.py
datagen/datagen/: asgi.py  celery.py  settings.py  storage_backends.py  urls.py  wsgi.py
datagen/datagen/settings/: base.py  heroku.py  local_docker.py  local_with_remote_services.py
datagen/dummygen/: apps.py  models.py  urls.py  views.py
datagen/dummygen/migrations/: 0001_initial.py  0002_alter_schema_user.py
datagen/dummygen/utils/: field_forms.py  generator.py  save_data.py
datagen/schema/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
datagen/schema/forms/: field_forms.py  main.py
datagen/schema/forms_/: field_forms.py  main.py
datagen/schema/migrations/: 0001_initial.py  0001_squashed_0012_rename_num_records_generateddata_num_rows_and_more.py  0002_schema_column_separator_schema_quotechar.py  0002_schema_modified.py  0003_limited_generation_permission.py  0003_rename_fields_schema_fields_json.py  0004_alter_generateddata_schema.py  0004_rename_fields_json_schema_fields.py  0004_rename_generateddata_dataset.py  0005_alter_dataset_schema.py  0005_alter_generateddata_schema.py  0005_generateddata_generation_complete.py  0006_generateddata_generation_complete.py  0006_remove_schema_fields_randomintcolumn_namecolumn_squashed_0007_remove_randomintcolumn_max_and_more.py  0006_remove_schema_fields_randomintcolumn_namecolumn_squashed_0007_remove_randomintcolumn_max_and_more_squashed_0011_rename_addressfieldform_addresscolumn_and_more.py  0007_alter_generateddata_schema.py  0007_alter_namecolumn_unique_together_and_more.py  0008_alter_randomintcolumn_max_alter_randomintcolumn_min.py  0008_remove_generateddata_slug_generateddata_file.py  0009_alter_namecolumn_unique_together_and_more.py  0009_remove_generateddata_generation_complete.py  0010_alter_addressfieldform_name_and_more.py  0010_generateddata_created.py  0011_alter_generateddata_created.py  0011_rename_addressfieldform_addresscolumn_and_more.py  0012_rename_num_records_generateddata_num_rows_and_more.py
datagen/schema/rest-api/: serializers.py
datagen/schema/rest_api/: serializers.py  urls.py  views.py
datagen/schema/services/: __init__.py  data_saving.py  generator.py  providers.py
datagen/schema/templates/: base.html
datagen/schema/tests/: __init__.py  test_forms.py  test_models.py  test_services.py  test_tasks.py  (+1 more)
datagen/users/: urls.py
(+26 files in other folders)
