[tool.poetry]
name = "datagen"
version = "0.1.0"
description = "An online service for generating CSV files with fake(dummy) data"
authors = ["data"]

[tool.poetry.dependencies]
python = "3.10.3"
Django = "~4.0.4"
factory-boy = "~3.2.1"
celery = "~5.2.6"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
